--- a/misc/README
+++ b/misc/README
@@ -5,3 +5,4 @@ rubydb2x.el       ruby debugger support for emacs 19.2x or before
 rubydb3x.el       ruby debugger support for emacs 19.3x or later
 ruby-electric.el  emacs minor mode providing electric commands
 rdebug.el         ruby-debug (rdebug) support for emacs 19.3x or later
+xcode-templates   ruby templates for Apple's Xcode IDE
