--- a/sample-macruby/PagePacker/README
+++ b/sample-macruby/PagePacker/README
@@ -1,6 +1,6 @@
-== PagePaker ==
+== PagePacker ==
 
-This is a MacRuby port of the original Objective-C PagePaker application, 
+This is a MacRuby port of the original Objective-C PagePacker application, 
 now available at http://weblog.bignerdranch.com/?p=41.
 
 == Licensing ==
