mention rb_objc_define_module_function()
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2383 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/TODO
+++ b/TODO
@@ -64,5 +64,8 @@ Porting from rb_define_method() to rb_objc_define_method():
   individual instances of objects, replace it with
   rb_objc_define_method(rb_singleton_class(obj), ...)
 
+  In the case of rb_define_module_function(), replace it with
+  rb_objc_define_module_function()
+
   In the case of rb_define_alloc_func(), replace it with
   rb_objc_define_method(*(VALUE *)klass, "alloc", ..., 0)
