--- a/spec/frozen/tags/macruby/language/predefined_tags.txt
+++ b/spec/frozen/tags/macruby/language/predefined_tags.txt
@@ -1,2 +1,3 @@
 fails:Predefined global $_ is set to the last line read by e.g. StringIO#gets
 fails:Predefined global $_ is set at the method-scoped level rather than block-scoped
+fails:Execution variable $: does not include the current directory
