--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 For 0.5 RC1:
 
 [ ] fix irb Binding bugs
-[ ] sockets
+[/] sockets
 [ ] rubygems should work (modulo C extensions)
 
 For 0.5 (must do):
