removing tags for specs that now pass
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2499 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/spec/frozen/tags/macruby/language/class_tags.txt
+++ b/spec/frozen/tags/macruby/language/class_tags.txt
@@ -1,1 +1,2 @@
-fails:A class definition raises TypeError if constant given as class name exists and is not a Module
+# This spec is marked as failing because it messes the top level object, probably a bug in #eval
+fails:A Class Definitions extending an object raises a TypeError when trying to extend numbers
