mention rubygems bugs
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2537 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/TODO
+++ b/TODO
@@ -4,6 +4,9 @@ For 0.5 RC1:
 [/] sockets
 [ ] backtracing / symbolication
 [/] rubygems should work (modulo C extensions)
+  [ ] fix version numbers
+  [ ] fix YAML deserialization of booleans
+  [ ] source --add http://gems.github.com crashes (outside gdb)
 
 For 0.5 (must do):
 
