--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ For 0.5 RC1:
 [ ] backtracing / symbolication
 [/] rubygems should work (modulo C extensions)
   [ ] fix version numbers
-  [ ] fix YAML deserialization of booleans
+  [X] fix YAML deserialization of booleans
   [ ] fix ~/.gemrc
   [X] `source --add http://gems.github.com' crashes (outside gdb)
   [ ] `install rest-client' prints a lot of debug code
