--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ For 0.5 RC1:
   [X] `source --add http://gems.github.com' crashes (outside gdb)
   [ ] `install rest-client' prints parsing errors (encoding problem in thor.gemspec)
   [ ] `gem uninstall bacon' doesn't work (Unknown gem bacon >= 0)
+  [ ] `macgem install rails --version 2.3.2' crashes (MAX_DISPATCH_ARGS assertion)
 
 For 0.5 (must do):
 
@@ -23,6 +24,8 @@ For 0.5 (must do):
 [ ] fully implement FFI API
 [ ] support for bigdecimal
 [ ] support for json
+[/] support for yaml
+[ ] support for openssl
 [/] support for zlib
 [ ] merge stdlib from 1.9.2 trunk
 [/] most language/core/library specs should run (modulo a very few exceptions)
