--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ For 0.5 RC1:
   [ ] `install rest-client' prints parsing errors (encoding problem in thor.gemspec)
   [ ] `gem uninstall bacon' doesn't work (Unknown gem bacon >= 0)
   [ ] `macgem install rails --version 2.3.2' crashes (MAX_DISPATCH_ARGS assertion)
+[ ] rewrite load.c (needed for RubyGems' #require hack)
 
 For 0.5 (must do):
 
@@ -19,7 +20,6 @@ For 0.5 (must do):
 [X] Array subclass for immediates
 [ ] Hash subclass for immediates
 [ ] try/catch should use a C++ exception
-[ ] rewrite load.c
 [ ] ObjC exceptions should be catchable in Ruby
 [ ] fully implement FFI API
 [ ] support for bigdecimal
