--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@ For 0.5 (must do):
 [/] support for yaml
 [ ] support for openssl
 [/] support for zlib
+[/] support for Mocha (grep -R 'Mocha TODO' test_vm)
 [ ] merge stdlib from 1.9.2 trunk
 [/] most language/core/library specs should run (modulo a very few exceptions)
 [ ] add the DTrace custom probes
