move the AOT compilation of the stdlib into the main build task, introduce the VM_DISABLE_RBO environment variable to disable the load of rbo files, change instruby.rb to install the .rbo files
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2601 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/HACKING.rdoc
+++ b/HACKING.rdoc
@@ -102,6 +102,8 @@ The following environment variables might help you debug easy bugs.
 
 * GC_DEBUG: set it to any value to enable GC debugging on $stderr.
 
+* VM_DISABLE_RBO: set it to any value to disable the load of .rbo files.
+
 * VM_DUMP_IR: set it to any value to dump the LLVM IR on $stderr before the
   interpreter quits.
 
