moving to LLVM r82747
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2630 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/README.rdoc
+++ b/README.rdoc
@@ -21,11 +21,12 @@ http://macruby.org
 
 * Mac OS X 10.5.6 or later.
 
-* LLVM trunk, compiled for both i386 and x86_64.
+* LLVM ToT, compiled for both i386 and x86_64.
 
-  In case trunk reveals to be unstable we recommend revision 72741.
+  LLVM is a moving target and breaks periodically. We recommend to install
+  revision 82747.
 
-    $ svn co -r 72741 https://llvm.org/svn/llvm-project/llvm/trunk llvm-trunk
+    $ svn co -r 82747 https://llvm.org/svn/llvm-project/llvm/trunk llvm-trunk
     $ cd llvm-trunk
     $ ./configure
     $ UNIVERSAL=1 UNIVERSAL_ARCH="i386 x86_64" ENABLE_OPTIMIZED=1 make
