the llvm 2.6 stuff is done
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2642 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/TODO
+++ b/TODO
@@ -48,7 +48,7 @@ For 0.5 (tentative):
 [ ] fast regexp =~
 [ ] rakefile-ize instruby.rb
 [/] finish AOT compiler (only normal mode)
-[/] sync with LLVM 2.6 (DONE in llvm26 branch, blocked by LLVM regressions)
+[X] sync with LLVM 2.6/ToT
 [ ] multithreaded JIT
 [ ] debugger interface
 
