--- a/TODO
+++ b/TODO
@@ -39,6 +39,7 @@ For 0.5 (must do):
 [/] port all rb_obj_respond_to() calls to rb_vm_respond_to()
 [X] refresh copyright headers for 2009
 [ ] rdoc should work
+[ ] MacRuby should not ignore SIGINT
 
 For 0.5 (tentative):
 
