added a 0.6 section in the TODO
git-svn-id: http://svn.macosforge.org/repository/ruby/MacRuby/trunk@2675 23306eb0-4c56-4727-a40e-e92c0eb68959

--- a/TODO
+++ b/TODO
@@ -54,6 +54,10 @@ For 0.5 (tentative):
 [ ] debugger interface
 [ ] fully implement FFI API
 
+For 0.6:
+[ ] fully implement FFI API
+[ ] add support for encodings in strings
+
 Porting from rb_define_method() to rb_objc_define_method():
 
   Replace calls to rb_define_method() with a call to
